# time_provider_testable_interface

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-test.yml
include/: fake_alarm copy.h  i_alarm.h  i_time_provider.h  system_time_provider.h  time_utils.h  version.h  zero_time_provider.h
src/: fake_alarm.cpp  main.cpp  system_time_provider.cpp  time_utils.cpp  zero_time_provider.cpp
tests/: CMakeLists.txt  test_alarm.cpp  test_fake_alarm.cpp  test_system_time_provider.cpp  test_zero_time_provider.cpp
